# Ray-Tracer

./: CMakeCache.txt  CMakeLists.txt  DesignNotes.txt  InfinitePlane.h  Makefile  Pixel.h  Point.h  README.md  README.txt  Ray.h  RayTracing  RayTracing.cbp  Sphere.h  cmake_install.cmake  main.cpp
src/: Color.h  InfinitePlane.h  LightSource.h  Pixel.h  Plane.cpp  Plane.h  Point.h  Ray.h  Scene.cpp  Scene.h  Shape.h  Sphere.cpp  Sphere.h  Vec3.h  main.cpp
